allow collapsing nodes and show correct index of parameter #34

--- a/src/client/app/stylesheets/components/smart/actionChooser.scss
+++ b/src/client/app/stylesheets/components/smart/actionChooser.scss
@@ -1,18 +1,18 @@
 .ReactModal__Overlay {
 
-    text-align: center;
-    padding: 20px;
+	text-align: center;
+	padding: 20px;
 
 }
 
 :local(.actionChooser) {
 
 	overflow-y: scroll;
-    height: 100%;
+	height: 100%;
 	text-align: left;
-    display: inline-block;
-    background-color: white;
-    padding: 5px;
+	display: inline-block;
+	background-color: white;
+	padding: 5px;
 
 	.list-view {
 		vertical-align: top;
@@ -21,12 +21,20 @@
 
 	.tree-view {
 
-	    vertical-align: top;
+		vertical-align: top;
 		display: inline-block;
 		padding-top: 20px;
 
 		.tree-view-node {
-		    margin-left: 20px;
+			margin-left: 20px;
+
+			.expanded:before {
+				content: ">";
+			}
+			
+			.collapsed:before {
+				content: "v";
+			}
 		}
 	}
 
